<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_title">Android Sudoku</string>
    <string name="app_name">Sudoku</string>
    <string name="continue_Label">Continue</string>
    <string name="newGame_Label">New Game</string>
     <string name="about_Label">About</string>
      <string name="about_title">About Android Sudoku</string>
      <string name="exit_Label">Exit</string>
      
      <string name="about_text">\
      Sudoku is a logic-based number placement puzzle.
      Staring with a partially completed 9x9 grid, the
      objective is to fill the grid so that each of the 3x3 boxes
      (also called <i>blocks</i>)contains the digits
      1 to 9 exactly once.
      </string>
      <string name="settings_label">Settings..</string>
      <string name="settings_title">Suduko settings</string>
      <string name="settings_shortcut">S</string>
      <string name="music_title">Music</string>
      <string name="music_summary">Play Background Music</string>
       <string name="hints_title">Hints</string>
      <string name="hints_summary">Show Hiunts during play</string>
      <string name="new_game_title">Difficulty</string>
      <string name="easy_label">Easy</string>
      <string name="medium_label">Medium</string>
      <string name="hard_label">Hard</string>
      <string name="game_title">Game</string>
      <string name="no_moves_label">No Moves</string>
      <string name="keypad_title">Keypad</string>
      
      
      
</resources>